--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "加油省车主",
-    "appid" : "__UNI__FB3E0A1",
-    "description" : "加油省车主",
+    "name" : "车主优惠加油",
+    "appid" : "__UNI__9B1651D",
+    "description" : "车主优惠加油",
     "versionName" : "2.0.2",
     "versionCode" : 3,
     "transformPx" : false,
