--- a/manifest.json
+++ b/manifest.json
@@ -156,7 +156,9 @@
                 }
             },
             "splashscreen" : {
-                "useOriginalMsgbox" : true
+                "useOriginalMsgbox" : true,
+                "androidStyle" : "common",
+                "iosStyle" : "storyboard"
             }
         }
     },
